tar bort litt kompleksitet ved å ha egen respons object, fikse swagger og litt refaktorering av variabelnavn til å bli mer tabellnavn
